# This file is a shell script that supplies the information necessary
# to tailor a template configure script into the configure script
# appropriate for this directory.  For more information, check any
# existing configure script.

srctrigger=ar.c
srcname="Binutils"

configdirs="testsuite"

# per-host:

host_makefile_frag=
if [ -f ${srcdir}/../bfd/config/${my_host}.mh ] ; then
	host_makefile_frag=../bfd/config/${my_host}.mh
fi

# per-target:
